<resources>
    <string name="app_name">FoodRunner</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="registeryourself">Don\'t have an account? SignUp now</string>
    <string name="sharedpreferences">sharedpreference</string>
    <string name="registration">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="registerpassword">Password</string>
    <string name="address">Address</string>
    <string name="mobile_number">Mobile number(10digits)</string>
    <string name="email">Email</string>
    <string name="enter_name">Name</string>
    <string name="next">Next</string>
    <string name="enter_mobile_forgot_password">Enter Mobile number and Email</string>
    <string name="enter_otp">Enter otp</string>
    <string name="submit">Submit</string>
    <string name="logout">Log Out</string>
    <string name="faqs">FAQs</string>
    <string name="favorites">Favourite Restaurants</string>
    <string name="my_profile">My Profile</string>
    <string name="home">Home</string>
    <string name="order_history">Order History</string>

    <string name="faq_answer_one">A.1 You will be taught using pre-recorded videos and text tutorials. The training has
        quizzes, assignments, and tests to help you learn better. At the end of the training, you will attempt a project
        to get hands-on practice of what you learn during your training.
    </string>
    <string name="faq_answer_two">A.2 As this is a purely online training program, you can choose to learn at any time
        of the day. We will recommend a pace to be followed throughout the program, but the actual timings and learning
        hours can be decided by students according to their convenience.
    </string>
    <string name="faq_answer_four">A.4 We recommend spending 10-12 hours per week. However, the actual learning hours
        can be decided by you as per your convenience.
    </string>
    <string name="faq_answer_three">A.3 The training duration is of 6 weeks.</string>
    <string name="faq_answer_five">A.5 You can choose your preferred batch date while signing up for the training
        program.
    </string>
    <string name="faq_answer_six">A.6 You will be able to download the certificate once you complete your training and
        take the final test.
    </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_favorites">No Favoutries</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="can_t_find_any_restaurant_with_that_name">No restaurant found</string>
</resources>
