<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.ForgotPassword2">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />


        <EditText
            android:id="@+id/etEnterotp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/toolbar"
            android:layout_margin="10dp"
            android:background="@drawable/textboundary"
            android:hint="@string/enter_otp"
            android:inputType="number"
            android:maxLines="1"
            android:padding="10dp"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/etForgotpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etEnterotp"
            android:layout_margin="10dp"
            android:background="@drawable/textboundary"
            android:hint="@string/registerpassword"
            android:inputType="numberPassword"
            android:maxLength="10"
            android:maxLines="1"
            android:padding="10dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/etfConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etForgotpassword"
            android:layout_margin="10dp"
            android:background="@drawable/textboundary"
            android:hint="@string/confirm_password"
            android:inputType="numberPassword"
            android:maxLines="1"
            android:padding="10dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/black" />

        <Button
            android:id="@+id/btnsubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etfConfirmPassword"
            android:layout_margin="10dp"
            android:background="@color/colorPrimaryDark"
            android:padding="10dp"
            android:text="@string/submit"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/white" />

    </RelativeLayout>

</RelativeLayout>