<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.Registration"
    android:orientation="vertical"
    android:fillViewport="true"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/rlRegister"
            android:background="@color/colorPrimary">


            <include
                android:id="@+id/toolbar"
                layout="@layout/toolbar"/>

            <EditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/toolbar"
                android:layout_marginLeft="12dp"
                android:background="@drawable/textboundary"
                android:layout_marginTop="30dp"
                android:layout_marginRight="12dp"
                android:hint="@string/enter_name"
                android:padding="10dp"
                android:singleLine="true"
                android:drawableLeft="@drawable/ic_profile"
                android:drawablePadding="3dp"
                android:textColor="@android:color/black"
                android:textSize="16sp"/>

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/etName"
                android:background="@drawable/textboundary"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="6dp"
                android:layout_marginRight="12dp"
                android:drawableLeft="@drawable/ic_email"
                android:drawablePadding="3dp"
                android:maxLines="1"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textSize="16sp"/>


            <EditText
                android:id="@+id/etPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/textboundary"
                android:layout_below="@+id/etEmail"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="6dp"
                android:layout_marginRight="12dp"
                android:maxLength="10"
                android:drawableLeft="@drawable/ic_mobile"
                android:drawablePadding="3dp"
                android:maxLines="1"
                android:hint="@string/mobile_number"
                android:inputType="phone"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textSize="16sp"/>

            <EditText
                android:id="@+id/etAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/textboundary"
                android:layout_below="@+id/etPhoneNumber"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="6dp"
                android:layout_marginRight="12dp"
                android:gravity="top"
                android:drawableLeft="@drawable/ic_location"
                android:drawablePadding="3dp"
                android:hint="@string/address"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textSize="16sp"/>


            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:background="@drawable/textboundary"
                android:layout_height="wrap_content"
                android:layout_below="@+id/etAddress"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="6dp"
                android:layout_marginRight="12dp"
                android:hint="@string/registerpassword"
                android:inputType="numberPassword"
                android:padding="10dp"

                android:drawableLeft="@drawable/ic_lock"
                android:drawablePadding="3dp"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textSize="16sp"/>

            <EditText
                android:id="@+id/etConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/textboundary"
                android:layout_below="@+id/etPassword"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="6dp"
                android:layout_marginRight="12dp"
                android:hint="@string/confirm_password"
                android:inputType="numberPassword"
                android:padding="10dp"
                android:singleLine="true"

                android:drawableLeft="@drawable/ic_lock"
                android:drawablePadding="3dp"
                android:textColor="@android:color/black"
                android:textSize="16sp"/>


            <Button
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/etConfirmPassword"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="40dp"
                android:layout_marginRight="12dp"
                android:background="@color/colorPrimaryDark"
                android:text="@string/registration"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@android:color/white"/>
        </RelativeLayout>

    </RelativeLayout>


</ScrollView>